[package]
name = "hexentropy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_renet = "0.0.8"
bevy_rapier3d = { version = "0.21.0", features = [ "simd-stable", "parallel", "debug-render-3d" ] }
rltk = "0.8.7"
ndarray = "0.15.6"
lerp = "0.5.0"
bevy_embedded_assets = "0.7.0"
bevy_iced = "0.3.0"
indicatif = "0.17.5"